--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
-
-
     <link rel="stylesheet" href="/assets/css/login.css">
-
 </head>
 <body>
 <div id="container" class="container">
@@ -21,29 +18,29 @@
                 <div class="form sign-up">
                     <div class="input-group">
                         <i class='bx bxs-user'></i>
-                        <input type="text" placeholder="Username">
+                        <input type="text" placeholder="아이디">
                     </div>
                     <div class="input-group">
                         <i class='bx bx-mail-send'></i>
-                        <input type="email" placeholder="Email">
+                        <input type="email" placeholder="이름">
                     </div>
                     <div class="input-group">
                         <i class='bx bxs-lock-alt'></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="비밀번호">
                     </div>
                     <div class="input-group">
                         <i class='bx bxs-lock-alt'></i>
-                        <input type="password" placeholder="Confirm password">
+                        <input type="password" placeholder="비밀번호 확인">
                     </div>
                     <button>
-                        Sign up
+                        회원가입 하기
                     </button>
                     <p>
               <span>
-                Already have an account?
+                회원가입을 다 하셨나요?
               </span>
                         <b onclick="toggle()" class="pointer">
-                            Sign in here
+                            로그인 하기
                         </b>
                     </p>
                 </div>
@@ -57,26 +54,21 @@
                 <div class="form sign-in">
                     <div class="input-group">
                         <i class='bx bxs-user'></i>
-                        <input type="text" placeholder="Username">
+                        <input type="text" placeholder="아이디">
                     </div>
                     <div class="input-group">
                         <i class='bx bxs-lock-alt'></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="비밀번호">
                     </div>
                     <button>
-                        Sign in
+                        로그인
                     </button>
                     <p>
-                        <b>
-                            Forgot password?
-                        </b>
-                    </p>
-                    <p>
               <span>
-                Don't have an account?
+                아이디가 없으신가요?
               </span>
                         <b onclick="toggle()" class="pointer">
-                            Sign up here
+                            회원가입하기
                         </b>
                     </p>
                 </div>
@@ -94,7 +86,7 @@
         <div class="col align-items-center flex-col">
             <div class="text sign-in">
                 <h2>
-                    Welcome
+                    유&안 세무회계
                 </h2>
 
             </div>
@@ -110,7 +102,7 @@
             </div>
             <div class="text sign-up">
                 <h2>
-                    Join with us
+                    환영합니다.
                 </h2>
 
             </div>
