--- a/src/main/resources/static/assets/css/login.css
+++ b/src/main/resources/static/assets/css/login.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #4EA685;
-    --secondary-color: #57B894;
+    --primary-color: #14148C;
+    --secondary-color: #14148C;
     --black: #000000;
     --white: #ffffff;
     --gray: #efefef;
